[package]
name = "ifit"
version = "0.1.0"
authors = ["Tyler Southwick <tyler@northfuse.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
serde = { version = "1.0.59", features = ["derive"] }
scraper = "0.12.0"
