[package]
name = "ifit"
version = "0.2.2-alpha.0"
authors = ["Tyler Southwick <tyler@northfuse.io>"]
edition = "2018"
repository = "https://github.com/northfuse/ifit-rs"
exclude = [ "test/*" ]
description = "client to interact with iFit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
scraper = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
